[gd_scene load_steps=2 format=3 uid="uid://ccng225ok3v3v"]

[ext_resource type="Script" path="res://script/MultiPlayerController.gd" id="1_iqewt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqewt")

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.015
anchor_right = 0.165
anchor_bottom = 0.063
offset_left = 0.360001
offset_top = 0.28
offset_right = -0.0800018
offset_bottom = -1.824
text = "Host"

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.015
anchor_right = 0.165
anchor_bottom = 0.063
offset_left = 252.36
offset_top = 0.28
offset_right = 251.92
offset_bottom = 0.175999
text = "Start"

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.015
anchor_right = 0.165
anchor_bottom = 0.063
offset_left = 126.36
offset_top = 0.28
offset_right = 125.92
offset_bottom = 0.175999
text = "Join"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 72.0
offset_right = 447.0
offset_bottom = 103.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 75.0
offset_right = 66.0
offset_bottom = 98.0
text = "Name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
